@@ -125,7 +125,7 @@
       <!-- Tamanoir -->
       <tr valign="top">
         <td><b><a
-	href="http://perso.ens-lyon.fr/jean-patrick.gelas/TAMANOIR/">
+	href="http://www.ens-lyon.fr/LIP/RESO/Tamanoir/">
 	Tamanoir</a></b></td>
 	<td>Tamanoir system is a complete framework that allows users
 	    to easily deploy and maintain distributed active routers
@@ -199,8 +199,7 @@
 
       <!-- Rimfaxe -->
       <tr valign="top">
-        <td><b><a href="http://www.rimfaxe.com/rws/rws.jsp">Rimfaxe
-        Web Server</a></b></td>
+        <td><b>Rimfaxe Web Server</b></td>
 
 	<td>Rimfaxe is a web server featuring compilation of jsp pages
 	to .so libraries with gcj, SEDA-based architecture with
