@@ -1,3 +1,8 @@
+2006-07-01  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* done.html: Fix link to the Tamanoir project.
+	Remove link to Rimfaxe's site.
+
 2006-06-13  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Re-added Linux Journal link.
